--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,17 @@
-############################
-# ENV / SECRETS
-############################
+# ENV
 .env
 .env.*
-!.env.example
 
-############################
-# PYTHON (BACKEND)
-############################
+# Python
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-*.log
-.venv/
-venv/
-env/
 
-############################
-# FASTAPI OUTPUTS
-############################
+# PDFs
 generated_letters/*.pdf
 
-############################
-# NODE / REACT (FRONTEND)
-############################
+# Node
 node_modules/
 build/
-dist/
 
-############################
-# OS / EDITOR
-############################
+# OS
 .DS_Store
-Thumbs.db
-.vscode/
-.idea/
-
-############################
-# MISC
-############################
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
